Ruteo de navegacion funcionando OK

--- a/app-angular/src/app/componentes/login/login.component.html
+++ b/app-angular/src/app/componentes/login/login.component.html
@@ -1,11 +1,12 @@
 
-<div class="container">
+<div style="width:280px" class="container">
+  
   <label for="mail" class="sr-only"></label>
-  <input type="text" placeholder="Ingrese mail">
+  <input  class="form-control" type="text" placeholder="Ingrese mail">
   <br>
   <label for="passw" class="sr-only"></label>
-  <input type="text" placeholder="Ingrese password">
+  <input  class="form-control" type="text" placeholder="Ingrese password">
   <br>
-  <input type="button" class="btn btn-success" value="Ingresar">
+  <input  class="form-control" type="button" class="btn btn-success" value="Ingresar">
 </div>
 
