--- a/app-angular/src/app/componentes/page-not-found/page-not-found.component.html
+++ b/app-angular/src/app/componentes/page-not-found/page-not-found.component.html
@@ -1,3 +1,5 @@
-<p>
-  page-not-found works!
-</p>
+<h1 class="text text-warning text-center">Error 404: Página no se encuentra</h1>
+
+<br><br>
+
+<a class="text center" [routerLink]="[ '/login']">Ir a Login</a>
