API REST GET funcionando OK(Traer listado de Mascotas)

--- a/app-angular/src/app/componentes/login/login.component.html
+++ b/app-angular/src/app/componentes/login/login.component.html
@@ -8,5 +8,7 @@
   <input  class="form-control" type="text" placeholder="Ingrese password">
   <br>
   <input  class="form-control" type="button" class="btn btn-success" value="Ingresar">
+
+  {{login}}
 </div>
 
