--- a/app-angular/src/app/componentes/mascotas/mascotas.component.html
+++ b/app-angular/src/app/componentes/mascotas/mascotas.component.html
@@ -1,3 +1,28 @@
-<p>
-  mascotas works!
-</p>
+
+
+<button type="button" class="btn btn-primary">Agregar Mascota</button>
+
+<br><br>
+<div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>Sexo</th>
+        <th>Tipo</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let mascota of mascotas">
+        <td>{{mascota.nombre}}</td>
+        <td>{{mascota.edad}}</td>
+        <td>{{mascota.sexo}}</td>
+        <td>{{mascota.tipo}}</td>
+        <td><input type="button" class="btn btn-warning" value="Editar"></td>
+        <td><input type="button" class="btn btn-danger" value="Borrar"></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
